--- a/nuxeo-platform-login-mod_sso/pom.xml
+++ b/nuxeo-platform-login-mod_sso/pom.xml
@@ -41,7 +41,7 @@
 
     <dependency>
       <groupId>commons-logging</groupId>
-      <artifactId>commons-logging-api</artifactId>
+      <artifactId>commons-logging</artifactId>
     </dependency>
   </dependencies>
 
