--- a/nuxeo-platform-login-digest/pom.xml
+++ b/nuxeo-platform-login-digest/pom.xml
@@ -39,7 +39,7 @@
 
     <dependency>
       <groupId>commons-logging</groupId>
-      <artifactId>commons-logging-api</artifactId>
+      <artifactId>commons-logging</artifactId>
     </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
