--- a/nuxeo-platform-login-portal-sso/pom.xml
+++ b/nuxeo-platform-login-portal-sso/pom.xml
@@ -36,7 +36,7 @@
 
     <dependency>
       <groupId>commons-logging</groupId>
-      <artifactId>commons-logging-api</artifactId>
+      <artifactId>commons-logging</artifactId>
     </dependency>
   </dependencies>
 
