NXP-7750 cleaning up project variables

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <description>Addon defining sample widgets for demo and tests.</description>
 
   <properties>
-    <nuxeo.version>${pom.version}</nuxeo.version>
+    <nuxeo.version>${project.version}</nuxeo.version>
   </properties>
 
   <profiles>
