--- a/nuxeo-user-notification/pom.xml
+++ b/nuxeo-user-notification/pom.xml
@@ -28,7 +28,7 @@
     </dependency>
     <dependency>
       <groupId>javax.persistence</groupId>
-      <artifactId>persistence</artifactId>
+      <artifactId>persistence-api</artifactId>
     </dependency>
   </dependencies>
 
