--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   </description>
 
   <properties>
-    <nuxeo.version>${pom.version}</nuxeo.version>
+    <nuxeo.version>${project.version}</nuxeo.version>
   </properties>
 
   <dependencies>
