--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     <module>nuxeo-platform-convert</module>
     <module>nuxeo-platform-scheduler-core</module>
     <module>nuxeo-platform-forms-layout-api</module>
+    <module>nuxeo-platform-forms-layout-core</module>
     <module>nuxeo-platform-rendering</module>
     <module>nuxeo-platform-web-common</module>
     <module>nuxeo-platform-url-api</module>
