--- a/nuxeo-platform-forms-layout-client/pom.xml
+++ b/nuxeo-platform-forms-layout-client/pom.xml
@@ -20,6 +20,10 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-forms-layout-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-types-api</artifactId>
     </dependency>
     <dependency>
