Update to 0.6.0-SNAPSHOT including no-fulltext-parse fix, code cleanup

--- a/nuxeo-opencmis-bindings/pom.xml
+++ b/nuxeo-opencmis-bindings/pom.xml
@@ -37,6 +37,7 @@
     <dependency>
       <groupId>org.apache.chemistry.opencmis</groupId>
       <artifactId>chemistry-opencmis-server-bindings</artifactId>
+      <classifier>classes</classifier>
     </dependency>
     <dependency>
       <groupId>org.apache.chemistry.opencmis</groupId>
