--- a/nuxeo-core-management/pom.xml
+++ b/nuxeo-core-management/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111024_2229</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.core</groupId>
