--- a/nuxeo-launcher-commons/src/test/resources/templates/jboss/common/config/nuxeo.properties
+++ b/nuxeo-launcher-commons/src/test/resources/templates/jboss/common/config/nuxeo.properties
@@ -5,7 +5,7 @@ org.nuxeo.ecm.instance.host=localhost
 
 # product config
 org.nuxeo.ecm.product.name=Nuxeo DM
-org.nuxeo.ecm.product.version=5.4.3-SNAPSHOT
+org.nuxeo.ecm.product.version=5.4.3-I20111024_2229
 
 # runtime remoting config
 org.nuxeo.runtime.server.enabled=true
