--- a/nuxeo-platform-forms-layout-api/pom.xml
+++ b/nuxeo-platform-forms-layout-api/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111024_2229</version>
   </parent>
 
   <artifactId>nuxeo-platform-forms-layout-api</artifactId>
