--- a/nuxeo-platform-test/pom.xml
+++ b/nuxeo-platform-test/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>nuxeo-services-parent</artifactId>
     <groupId>org.nuxeo.ecm.platform</groupId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111024_2229</version>
   </parent>
 
   <artifactId>nuxeo-platform-test</artifactId>
