--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111024_2229</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.webengine</groupId>
   <artifactId>nuxeo-webengine-parent</artifactId>
-  <version>5.4.3-SNAPSHOT</version>
+  <version>5.4.3-I20111024_2229</version>
   <packaging>pom</packaging>
   <name>Nuxeo WebEngine</name>
   <description>
