--- a/nuxeo-distribution-jboss/pack/pom.xml
+++ b/nuxeo-distribution-jboss/pack/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.distribution</groupId>
     <artifactId>nuxeo-distribution</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111024_2229</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
