--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111024_2229</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>nuxeo-platform-rendition-parent</artifactId>
