--- a/nuxeo-opencmis-tests/pom.xml
+++ b/nuxeo-opencmis-tests/pom.xml
@@ -138,8 +138,8 @@
     </dependency>
     <!-- scope provided -->
     <dependency>
-      <groupId>javax.ressource</groupId>
-      <artifactId>jca-api</artifactId>
+      <groupId>javax.resource</groupId>
+      <artifactId>connector-api</artifactId>
       <scope>provided</scope>
     </dependency>
 
