NXP-7750 remove duplicate classes in distribution class paths

--- a/nuxeo-apidoc-webengine/pom.xml
+++ b/nuxeo-apidoc-webengine/pom.xml
@@ -99,8 +99,8 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.ressource</groupId>
-      <artifactId>jca-api</artifactId>
+      <groupId>javax.resource</groupId>
+      <artifactId>connector-api</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
