--- a/nuxeo-theme-styling/pom.xml
+++ b/nuxeo-theme-styling/pom.xml
@@ -34,6 +34,16 @@
       <groupId>org.nuxeo.runtime</groupId>
       <artifactId>nuxeo-runtime-test</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.theme</groupId>
+      <artifactId>nuxeo-theme-fragments</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.theme</groupId>
+      <artifactId>nuxeo-theme-html</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
