--- a/nuxeo-distribution-cap/pom.xml
+++ b/nuxeo-distribution-cap/pom.xml
@@ -356,13 +356,6 @@
   <build>
     <plugins>
       <plugin>
-	<groupId>org.jboss.tattletale</groupId>
-	<artifactId>tattletale-maven</artifactId>
-	<configuration>
-	  <source>${project.build.directory}/nuxeo.ear/lib</source>
-	</configuration>
-      </plugin>
-      <plugin>
         <groupId>org.nuxeo.build</groupId>
         <artifactId>nuxeo-distribution-tools</artifactId>
         <configuration>
@@ -371,5 +364,46 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>tattletale-linux</id>
+      <activation>
+        <os>
+          <family>linux</family>
+        </os>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jboss.tattletale</groupId>
+            <artifactId>tattletale-maven</artifactId>
+            <configuration>
+              <source>${project.build.directory}/nuxeo.ear/lib</source>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>tattletale-mac</id>
+      <activation>
+        <os>
+          <family>mac</family>
+        </os>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jboss.tattletale</groupId>
+            <artifactId>tattletale-maven</artifactId>
+            <configuration>
+              <source>${project.build.directory}/nuxeo.ear/lib</source>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
