--- a/nuxeo-distribution-jboss/pom.xml
+++ b/nuxeo-distribution-jboss/pom.xml
@@ -14,6 +14,10 @@
   <name>Nuxeo JBoss5 Distribution</name>
   <description>Package Nuxeo CAP or DM EAR with JBoss5</description>
 
+  <properties>
+    <product.name>dm</product.name>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
@@ -46,9 +50,6 @@
     <profile>
       <id>all-distributions</id>
       <!-- profile for building all classifiers -->
-      <properties>
-	<profile.name>dm</profile.name>
-      </properties>
     </profile>
     <profile>
       <id>all</id>
@@ -56,57 +57,27 @@
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
-      <properties>
-	<profile.name>dm</profile.name>
-      </properties>
     </profile>
     <profile>
       <id>nuxeo-cap</id>
       <!-- profile for building JBoss with only Nuxeo CAP -->
       <properties>
-	<profile.name>cap</profile.name>
+        <product.name>cap</product.name>
       </properties>
     </profile>
     <profile>
       <id>nuxeo-dm</id>
       <!-- profile for building JBoss with only Nuxeo DM -->
-      <properties>
-	<profile.name>dm</profile.name>
-      </properties>
     </profile>
     <profile>
-      <id>tattletale-linux</id>
-      <activation>
-        <os>
-          <family>linux</family>
-        </os>
-      </activation>
+      <id>release</id>
       <build>
         <plugins>
           <plugin>
             <groupId>org.jboss.tattletale</groupId>
             <artifactId>tattletale-maven</artifactId>
             <configuration>
-              <source>${project.build.directory}/nuxeo-${profile.name}-${project.version}-jboss/server/default/lib:${project.build.directory}/nuxeo-${profile.name}-${project.version}-jboss/server/default/deploy/nuxeo.ear/lib</source>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>tattletale-mac</id>
-      <activation>
-        <os>
-          <family>mac</family>
-        </os>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.jboss.tattletale</groupId>
-            <artifactId>tattletale-maven</artifactId>
-            <configuration>
-              <source>${project.build.directory}/nuxeo-${profile.name}-${project.version}-jboss/server/default/lib:${project.build.directory}/nuxeo-${profile.name}-${project.version}-jboss/server/default/deploy/nuxeo.ear/lib</source>
+              <source>${project.build.directory}/nuxeo-${product.name}-${project.version}-jboss/server/default/lib:${project.build.directory}/nuxeo-${product.name}-${project.version}-jboss/server/default/deploy/nuxeo.ear/lib</source>
             </configuration>
           </plugin>
         </plugins>
