--- a/nuxeo-distribution-tomcat/pom.xml
+++ b/nuxeo-distribution-tomcat/pom.xml
@@ -14,6 +14,10 @@
   <name>Nuxeo Tomcat Build</name>
   <description>Package Nuxeo CAP or DM WAR with Tomcat</description>
 
+  <properties>
+    <product.name>dm</product.name>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
@@ -41,9 +45,6 @@
     <profile>
       <id>all-distributions</id>
       <!-- profile for building all classifiers -->
-      <properties>
-        <profile.name>dm</profile.name>
-      </properties>
     </profile>
     <profile>
       <id>all</id>
@@ -51,29 +52,23 @@
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
-      <properties>
-        <profile.name>dm</profile.name>
-      </properties>
     </profile>
     <profile>
       <id>nuxeo-coreserver</id>
       <!-- profile for building Tomcat with only Nuxeo CoreServer -->
       <properties>
-	<profile.name>coreserver</profile.name>
+        <product.name>coreserver</product.name>
       </properties>
     </profile>
     <profile>
       <id>nuxeo-cap</id>
       <properties>
-	<profile.name>cap</profile.name>
+        <product.name>cap</product.name>
       </properties>
       <!-- profile for building Tomcat with only Nuxeo CAP -->
     </profile>
     <profile>
       <id>nuxeo-dm</id>
-      <properties>
-	<profile.name>dm</profile.name>
-      </properties>
       <!-- default profile for building Tomcat with only Nuxeo DM -->
     </profile>
     <profile>
@@ -82,38 +77,14 @@
         profile is activated) -->
     </profile>
     <profile>
-      <id>tattletale-linux</id>
-      <activation>
-        <os>
-          <family>linux</family>
-        </os>
-      </activation>
+      <id>release</id>
       <build>
         <plugins>
           <plugin>
             <groupId>org.jboss.tattletale</groupId>
             <artifactId>tattletale-maven</artifactId>
             <configuration>
-              <source>${project.build.directory}/nuxeo-${profile.name}-${project.version}-tomcat/nxserver/lib</source>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>tattletale-mac</id>
-      <activation>
-        <os>
-          <family>mac</family>
-        </os>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.jboss.tattletale</groupId>
-            <artifactId>tattletale-maven</artifactId>
-            <configuration>
-              <source>${project.build.directory}/nuxeo-${profile.name}-${project.version}-tomcat/nxserver/lib</source>
+              <source>${project.build.directory}/nuxeo-${product.name}-${project.version}-tomcat/nxserver/lib</source>
             </configuration>
           </plugin>
         </plugins>
