--- a/nuxeo-core-auth/pom.xml
+++ b/nuxeo-core-auth/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111027_0115</version>
   </parent>
 
   <artifactId>nuxeo-core-auth</artifactId>
