--- a/nuxeo-theme-webengine/pom.xml
+++ b/nuxeo-theme-webengine/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.webengine</groupId>
     <artifactId>nuxeo-webengine-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111027_0115</version>
   </parent>
 
   <artifactId>nuxeo-theme-webengine</artifactId>
