--- a/nuxeo-webengine-ui/pom.xml
+++ b/nuxeo-webengine-ui/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.webengine</groupId>
     <artifactId>nuxeo-webengine-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111027_0115</version>
   </parent>
 
   <artifactId>nuxeo-webengine-ui</artifactId>
