--- a/nuxeo-distribution-resources/src/main/resources/jetty-base/config/nuxeo.properties
+++ b/nuxeo-distribution-resources/src/main/resources/jetty-base/config/nuxeo.properties
@@ -4,7 +4,7 @@ org.nuxeo.ecm.instance.description=Nuxeo 5.4 Server on Jetty
 
 # product config
 org.nuxeo.ecm.product.name=Nuxeo DM
-org.nuxeo.ecm.product.version=5.4.3-SNAPSHOT
+org.nuxeo.ecm.product.version=5.4.3-I20111027_0115
 
 # runtime remoting config
 org.nuxeo.runtime.server.enabled=true
