--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111027_0115</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-platform-login-parent</artifactId>
-  <version>5.4.3-SNAPSHOT</version>
+  <version>5.4.3-I20111027_0115</version>
   <name>Nuxeo-platform login parent</name>
   <packaging>pom</packaging>
   <description>Nuxeo Platform login parent</description>
