--- a/pom.xml
+++ b/pom.xml
@@ -3645,6 +3645,12 @@
         <artifactId>jericho-html</artifactId>
         <version>3.2</version>
       </dependency>
+
+      <dependency>
+        <groupId>com.cforcoding.jmd</groupId>
+        <artifactId>jmd</artifactId>
+        <version>0.8.1-tomasol-3e60e36137</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
