--- a/nuxeo-platform-convert/pom.xml
+++ b/nuxeo-platform-convert/pom.xml
@@ -77,6 +77,10 @@
       <groupId>org.osgi</groupId>
       <artifactId>osgi-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.cforcoding.jmd</groupId>
+      <artifactId>jmd</artifactId>
+    </dependency>
 
     <!-- scope test -->
     <dependency>
