--- a/nuxeo-launcher/pom.xml
+++ b/nuxeo-launcher/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo</groupId>
     <artifactId>nuxeo-ecm</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-DEPRECATED</version>
   </parent>
 
   <artifactId>nuxeo-launcher</artifactId>
@@ -13,8 +13,8 @@
   <description>Build a Nuxeo launcher working with all Nuxeo products</description>
 
   <properties>
-    <nuxeo.runtime.version>5.4.3-SNAPSHOT</nuxeo.runtime.version>
-    <nuxeo.shell.version>5.4.3-SNAPSHOT</nuxeo.shell.version>
+    <nuxeo.runtime.version>5.4.3-DEPRECATED</nuxeo.runtime.version>
+    <nuxeo.shell.version>5.4.3-DEPRECATED</nuxeo.shell.version>
   </properties>
 
   <dependencyManagement>
