--- a/nuxeo-runtime-test/pom.xml
+++ b/nuxeo-runtime-test/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.runtime</groupId>
     <artifactId>nuxeo-runtime-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-DEPRECATED</version>
   </parent>
 
   <groupId>org.nuxeo.runtime</groupId>
