--- a/nuxeo-platform-scheduler-core/pom.xml
+++ b/nuxeo-platform-scheduler-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-DEPRECATED</version>
   </parent>
 
   <artifactId>nuxeo-platform-scheduler-core</artifactId>
