--- a/nuxeo-theme-styling/pom.xml
+++ b/nuxeo-theme-styling/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.theme</groupId>
     <artifactId>nuxeo-theme-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-DEPRECATED</version>
   </parent>
 
   <artifactId>nuxeo-theme-styling</artifactId>
