--- a/nuxeo-gwt-richtexteditor/pom.xml
+++ b/nuxeo-gwt-richtexteditor/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>nuxeo-opensocial-parent</artifactId>
     <groupId>org.nuxeo.ecm.opensocial</groupId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-DEPRECATED</version>
   </parent>
 
   <artifactId>nuxeo-gwt-richtexteditor</artifactId>
