--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>nuxeo-features-parent</artifactId>
     <groupId>org.nuxeo.ecm.platform</groupId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-DEPRECATED</version>
   </parent>
 
   <artifactId>nuxeo-platform-shibboleth-groups-web</artifactId>
