--- a/nuxeo-core-io/pom.xml
+++ b/nuxeo-core-io/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.3-DEPRECATED</version>
+    <version>5.5-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-core-io</artifactId>
