--- a/nuxeo-theme-jsf/pom.xml
+++ b/nuxeo-theme-jsf/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-jsf-parent</artifactId>
-    <version>5.4.3-DEPRECATED</version>
+    <version>5.5-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-theme-jsf</artifactId>
