--- a/nuxeo-webengine-jersey-adapter/pom.xml
+++ b/nuxeo-webengine-jersey-adapter/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.webengine</groupId>
     <artifactId>nuxeo-webengine-parent</artifactId>
-    <version>5.4.3-DEPRECATED</version>
+    <version>5.5-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-webengine-jersey-adapter</artifactId>
