NXP-7552: align on tools-nuxeo-ftest 1.7-SNAPSHOT while it's being worked on

--- a/pom.xml
+++ b/pom.xml
@@ -1756,7 +1756,7 @@
       <dependency>
         <groupId>org.nuxeo</groupId>
         <artifactId>nuxeo-ftest</artifactId>
-        <version>1.6.6</version>
+        <version>1.7-SNAPSHOT</version>
         <type>zip</type>
       </dependency>
       <dependency>
