NXP-7810: improve data source definitions in Tomcat templates

--- a/nuxeo-distribution-resources/src/main/resources/bin/nuxeo.conf
+++ b/nuxeo-distribution-resources/src/main/resources/bin/nuxeo.conf
@@ -44,6 +44,8 @@ nuxeo.force.generation=true
 #nuxeo.db.password=
 #nuxeo.db.host=
 #nuxeo.db.port=
+#nuxeo.db.jdbc.url=
+#nuxeo.db.driver=
 #nuxeo.db.min-pool-size=
 #nuxeo.db.max-pool-size=
 #nuxeo.vcs.min-pool-size=
