NXP-7521: fix css overriding by adding a nx prefix to default classes in the theme layout, fix border color not displayed + cleaning

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
@@ -1,6 +1,7 @@
 color.major.light=#e6f6ff
 color.major.medium=#cfecff
 color.major.strong=#adf
+color.major.stronger=#4e9ae1
 
 color.minor.light=#bbb
 color.minor.medium=#bbb
