--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-borders.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-borders.properties
@@ -1,10 +1,11 @@
-lighter=#e7e7e7
-light=#c6c6c6
-medium=#aaa
-dark=#292929
+neutral.lighter=#e7e7e7
+neutral.light=#c6c6c6
+neutral.medium=#aaa
+neutral.dark=#292929
 
-color.major.strong=#70bbff
 color.major.medium=#cfecff
+color.major.strong=#70bbff
+color.major.stronger=#4e9ae1
 
 button=#c9c9c9
 button.hover=#aaa
