NXP-7614: introduce new service for layout management, handling registries per category, and converters for layout/wiodget definitions export. Runtime descriptors do not implement layout interfaces anymore (useless and painful to maintain).

--- a/nuxeo-platform-forms-layout-api/pom.xml
+++ b/nuxeo-platform-forms-layout-api/pom.xml
@@ -12,6 +12,8 @@
   <artifactId>nuxeo-platform-forms-layout-api</artifactId>
   <name>Nuxeo Forms Layout API</name>
 
+  <!-- no dependencies to be easily used by GWT code -->
+
   <build>
     <!-- gwt compiler needs the java sources to correctly work -->
     <resources>
