NXP-7614: move layout-io-plugins from nuxeo-jsf to nuxeo-features

--- a/pom.xml
+++ b/pom.xml
@@ -686,11 +686,6 @@
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-forms-layout-io-plugins</artifactId>
-        <version>${nuxeo.jsf.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-seam-debug</artifactId>
         <version>${nuxeo.jsf.version}</version>
       </dependency>
@@ -947,6 +942,11 @@
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-domsync-core</artifactId>
+        <version>${nuxeo.features.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-forms-layout-io-plugins</artifactId>
         <version>${nuxeo.features.version}</version>
       </dependency>
       <dependency>
