NXP-7614: move layout-io-plugins from nuxeo-jsf to nuxeo-features

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <module>nuxeo-automation</module>
     <module>nuxeo-features-test</module>
     <module>nuxeo-admin-center</module>
+    <module>nuxeo-platform-forms-layout-io-plugins</module>
     <module>nuxeo-platform-forms-layout-export</module>
     <module>nuxeo-platform-localconfiguration</module>
     <module>nuxeo-platform-directory-web</module>
