--- a/nuxeo-platform-video-convert/pom.xml
+++ b/nuxeo-platform-video-convert/pom.xml
@@ -18,6 +18,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-video-api</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.nuxeo.ecm.core</groupId>
       <artifactId>nuxeo-core-convert</artifactId>
     </dependency>
